# atos_praksa

./: .gitignore  README.md
priprema/: .gitignore  README.md
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak03/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak04/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak05/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak06/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak07/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak08/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak09/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak10/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak11/: MessagesBundle_de_DE.properties  MessagesBundle_es_ES.properties  MessagesBundle_fr_FR.properties  Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak12/: Source.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak13/: Person.java  Source.java  Workout.java
priprema/src/hr/atos/praksa/hrvojeskrbina/zadatak14/: FunctionIntegration.java  (+2 more)
priprema/teorija/: HrvojeŠkrbina_Zadatci_RazvojniInzenjer.docx
zadatak2/src/: Professor.cpp
zadatak3/src/: main.cpp
zadatak4/: CMakeLists.txt  main.cpp
zadatak5/: CMakeLists.txt
zadatak5/include/Professor/: Professor.h
zadatak5/src/: Professor.cpp  Student.cpp  main.cpp
zadatak6/: CMakeLists.txt
zadatak6/include/Student/: Student.h
zadatak6/src/: main.cpp
zadatak7/: CMakeLists.txt
zadatak7/Professor/: CMakeLists.txt
zadatak7/Student/: CMakeLists.txt
(+17 files in other folders)
