cmake_minimum_required(VERSION 3.2)
set(PROJECT_NAME Professor)
set(LIBRARY_NAME Professor)
set(LIBRARY_HEADERS_DIR include/${LIBRARY_NAME})
set(LIBRARY_HEADERS ${LIBRARY_HEADERS_DIR}/Professor.h)
set(LIBRARY_SOURCE_DIR src)
set(LIBRARY_SOURCE ${LIBRARY_SOURCE_DIR}/Professor.cpp)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_SOURCE_DIR}/../lib)

project(${PROJECT_NAME})

add_library(${LIBRARY_NAME} SHARED
	${LIBRARY_HEADERS}
	${LIBRARY_SOURCE}
)
